[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

[dependencies]
thirtyfour = "0.35.0"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
indexmap = { version = "2.9.0", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
